--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "mongoose": "^4.1.3",
     "morgan": "^1.5.3",
     "passport": "^0.3.0",
+    "passport-github": "^0.1.5",
     "passport-google-oauth": "^0.2.0",
     "passport-local": "^1.0.0",
     "serve-favicon": "~2.2.1"
