--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "method-override": "^2.3.5",
     "mongoose": "^4.1.3",
     "morgan": "^1.5.3",
-    "passport": "^0.3.0",
+    "passport": "0.2.2",
     "passport-github": "^0.1.5",
     "passport-google-oauth": "^0.2.0",
     "passport-local": "^1.0.0",
